--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,62 @@
-<html>
+<!--<html>
     <body>
         <p> This is a test.</p>
         <button onclick="myFunction()">Click me</button>
     </body>
+</html>
+-->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.13/css/jquery.dataTables.css">
+  <script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
+  <script src="javascripts/test.js"></script>
+</head>
+
+<body>
+
+  <!--<script>
+  function mar(){
+    console.log("DEBUG");
+    $("button").hide();
+  }
+$('button').click(function(){
+  $(this).hide();
+});
+
+</script>-->
+
+  <div class="container">
+    <h1>My First Bootstrap Page</h1>
+    <p>This is some text.</p>
+  </div>
+  <button class="btn">Click me</button>
+
+  <table id="table_id" class = 'table'>
+    <thead>
+      <tr>
+        <th>Column 1</th>
+        <th>Column 2</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Row 1 Data 1</td>
+        <td>Row 1 Data 2</td>
+      </tr>
+      <tr>
+        <td>Row 2 Data 1</td>
+        <td>Row 2 Data 2</td>
+      </tr>
+    </tbody>
+  </table>
+</body>
+
 </html>
