--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
 <html lang="en">
 
 <head>
-  <title>Bootstrap Example</title>
+  <title>DD's Finance</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -21,17 +21,13 @@
 </head>
 
 <body>
-
-  <!--<script>
-  function mar(){
-    console.log("DEBUG");
-    $("button").hide();
-  }
-$('button').click(function(){
-  $(this).hide();
-});
-
-</script>-->
+  <form action="/api/puppies" id="form1">
+    <input type="text" name="name" class="form-control" placeholder="name">
+    <input type="text" name="breed" class="form-control"placeholder="breed">
+    <input type="text" name="age" class="form-control" placeholder="age">
+    <input type="text" name="sex" class="form-control" placeholder="sex">
+    <input type="submit" value="submit" class = 'btn btn-default'>
+  </form>
 
   <div class="container">
     <h1>My First Bootstrap Page</h1>
@@ -39,7 +35,7 @@ $('button').click(function(){
   </div>
   <button class="btn">Click me</button>
 
-  <table id="table_id" class = 'table'>
+  <table id="table_id" class='table'>
     <thead>
       <tr>
         <th>Column 1</th>
