--- a/views/homepage.html
+++ b/views/homepage.html
@@ -62,6 +62,16 @@
                 <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
             </div>
         </div>
+        <!-- stock table-->
+        <table id="table_id" class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Stock Name</th>
+                    <th>Industry</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
     </div>
 </body>
 
