--- a/views/index.html
+++ b/views/index.html
@@ -48,23 +48,15 @@ $('button').click(function(){
     <p>This is some text.</p>
   </div>
   <button class="btn">Click me</button>
-  <table id="table_id" class = 'table'>
-  <table id="table_id" class='table'>
+    <table id="table_id" class="table table-striped">
     <thead>
       <tr>
-        <th>Column 1</th>
-        <th>Column 2</th>
+        <th>Stock Name</th>
+        <th>Industry</th>
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>Row 1 Data 1</td>
-        <td>Row 1 Data 2</td>
-      </tr>
-      <tr>
-        <td>Row 2 Data 1</td>
-        <td>Row 2 Data 2</td>
-      </tr>
+      
     </tbody>
   </table>
 </body>
