--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
-  <script src="javascripts/test.js"></script>
+  <script src="javascripts/index.js"></script>
 </head>
 
 <body>
@@ -34,14 +34,14 @@ $('button').click(function(){
 });
 
 </script>-->
-
+<!--
   <form action="/api/puppies" id="form1">
     <input type="text" name="name" class="form-control" placeholder="name">
     <input type="text" name="breed" class="form-control"placeholder="breed">
     <input type="text" name="age" class="form-control" placeholder="age">
     <input type="text" name="sex" class="form-control" placeholder="sex">
     <input type="submit" value="submit" class = 'btn btn-default'>
-  </form>
+  </form>-->
 
   <div class="container">
     <h1>My First Bootstrap Page</h1>
