--- a/views/homepage.html
+++ b/views/homepage.html
@@ -5,7 +5,7 @@
     <title>Home</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
     <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.13/css/jquery.dataTables.css">
@@ -13,7 +13,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
-    <script src="javascripts/test.js"></script>
+    <script src="javascripts/index.js"></script>
 </head>
 
 <body>
@@ -50,26 +50,44 @@
         <div class="row">
             <div class="col-md-6">
                 <h2>Top Gainers</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                    condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
-                    Donec sed odio dui. </p>
-                <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+                <!-- gainers table-->
+                <table id="table_gainers" class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Stock Name</th>
+                            <th>Curr Price</th>
+                            <th>Change</th>
+                            <th>Percentage Change</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
             </div>
             <div class="col-md-6">
                 <h2>Top Losers</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
-                    felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
-                    massa.
-                </p>
-                <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+                <!-- losers table-->
+                <table id="table_losers" class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Stock Name</th>
+                            <th>Curr Price</th>
+                            <th>Change</th>
+                            <th>Percentage Change</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
             </div>
         </div>
         <!-- stock table-->
-        <table id="table_id" class="table table-striped">
+        <table id="table_stocks" class="table table-striped">
             <thead>
                 <tr>
                     <th>Stock Name</th>
                     <th>Industry</th>
+                    <th>Curr Price</th>
+                    <th>Change</th>
+                    <th>Percentage Change</th>
                 </tr>
             </thead>
             <tbody></tbody>
