--- a/views/homepage.html
+++ b/views/homepage.html
@@ -42,8 +42,10 @@
     <!-- Jumbotron -->
     <div class="container">
         <div class="jumbotron">
-            <h1>Sensex Index</h1>
-            <p class="lead">Put something here</p>
+            <h6>Sensex Index</h6>
+            <h1 id = "sensex_index"></h1>
+            <p id = "sensex_diff" class="lead"></p>
+            <p id = "sensex_perc" class="lead"></p>
             <p><a class="btn btn-lg btn-success" href="#" role="button">DashBoard</a></p>
         </div>
         <!-- Example row of columns -->
