--- a/views/homepage.html
+++ b/views/homepage.html
@@ -34,8 +34,8 @@
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                <li><a href="\register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                <li><a href="\login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             </ul>
         </div>
     </nav>
@@ -96,7 +96,7 @@
         </table>
 
         <!-- stock detail table-->
-        
+        <!--hidden initially-->
         <div id="stock_div">
             <div class="jumbotron">
                 <h5>Individual Stock Details</h5>
