--- a/views/homepage.html
+++ b/views/homepage.html
@@ -24,7 +24,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Page 1</a></li>
+                <li><a href="/admin">Admin Hub</a></li>
                 <li><a href="#">Page 2</a></li>
             </ul>
             <form class="navbar-form navbar-left">
