--- a/views/login.html
+++ b/views/login.html
@@ -18,9 +18,9 @@
     <div class="container">
         <form class="form-signin" >
             <h2 class="form-signin-heading">Please sign in</h2>
-            <input type="text" name="userName" class="form-control" placeholder="UserName" required autofocus>
-            <input type="password" name="password" class="form-control" placeholder="Password" required>
-            <input class="btn btn-lg btn-primary btn-block" type="submit" />
+            <input type="text" name="username" class="form-control" placeholder="username" required autofocus>
+            <input type="password" name="password" class="form-control" placeholder="password" required>
+            <input class="btn btn-lg btn-primary btn-block" type="submit" value = "login" />
         </form>
     </div>
     <!-- /container -->
