--- a/views/homepage.html
+++ b/views/homepage.html
@@ -13,7 +13,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
-    <script src="javascripts/index.js"></script>
+    <script src="javascripts/homepage.js"></script>
 </head>
 
 <body>
@@ -25,17 +25,18 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="/admin">Admin Hub</a></li>
-                <li><a href="#">Page 2</a></li>
+                <li><a href="*">Page 2</a></li>
             </ul>
-            <form class="navbar-form navbar-left">
+            <!--<form class="navbar-form navbar-left">
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Search">
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
-            </form>
+            </form>-->
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="\register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                 <li><a href="\login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                <li><a href="\logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
             </ul>
         </div>
     </nav>
@@ -46,7 +47,7 @@
             <h1 id="sensex_index"></h1>
             <p id="sensex_diff" class="lead"></p>
             <p id="sensex_perc" class="lead"></p>
-            <p><a class="btn btn-lg btn-success" href="#" role="button">DashBoard</a></p>
+            <p><a class="btn btn-lg btn-success" role="button" id = "portfolio_button">DashBoard</a></p>
         </div>
         <!-- Example row of columns -->
         <div class="row">
