--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -45,6 +45,7 @@
             <h6>Portfolio Value</h6>
             <h1 id="portfolio_value"></h1>
             <p id="portfolio_profit" class="lead"></p>
+            <button type="button" class="btn btn-primary">Update PortFolio</button>
             <!--<p id="sensex_perc" class="lead"></p>-->
         </div>
         <!-- price table-->
