--- a/views/sensexview.html
+++ b/views/sensexview.html
@@ -13,11 +13,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
+    <script src="http://canvasjs.com/assets/script/canvasjs.min.js"></script>
     <script src="javascripts/sensexview.js"></script>
 </head>
 
 
 <body>
+    <div id="chartContainer" style="width:100%; height:280px"></div>
     <div class="jumbotron">
         <h6>Sensex Index</h6>
         <h1 id="sensex_index"></h1>
@@ -29,13 +31,13 @@
         <thead>
             <tr>
                 <!--day, open, high, low, close, volume, adj_close-->
-                    <th>Day</th>
-                    <th>Open</th>
-                    <th>High</th>
-                    <th>Low</th>
-                    <th>Close</th>
-                    <th>Volume</th>
-                    <th>Adj_Close</th>
+                <th>Day</th>
+                <th>Open</th>
+                <th>High</th>
+                <th>Low</th>
+                <th>Close</th>
+                <th>Volume</th>
+                <th>Adj_Close</th>
             </tr>
         </thead>
         <tbody></tbody>
