--- a/views/adminhub.html
+++ b/views/adminhub.html
@@ -15,6 +15,31 @@
 </head>
 
 <body>
+    <div id="navbarholder" > 
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="/">StockPort</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="/">Home</a></li>
+                    <li><a href="/admin">Admin Hub</a></li>
+                </ul>
+                <!--<form class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>-->
+                <ul class="nav navbar-nav navbar-right">
+                    <li id = "signup"><a href="\register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                    <li id = "login"><a href="\login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <li id = "logout"><a href="\logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                    <!--<li id = "loggedin" hidden><a href="\logout"><span class="glyphicon glyphicon-log-out"></span> Name</a></li>-->
+                </ul>
+            </div>
+        </nav>
+    </div>
     <div class="row" align = "center">
         <div class="col-md-6">
             <!--<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image"
