--- a/views/homepage.html
+++ b/views/homepage.html
@@ -9,38 +9,41 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
     <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.13/css/jquery.dataTables.css">
-
+    <link rel="stylesheet" type="text/css" href="stylesheets/login.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
     <script src="http://canvasjs.com/assets/script/canvasjs.min.js"></script>
     <script src="javascripts/homepage.js"></script>
+    <!--<script src="javascripts/navbar.js"></script>-->
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Portfolio Manager</a>
-            </div>
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="/admin">Admin Hub</a></li>
-                <li><a href="*">Page 2</a></li>
-            </ul>
-            <!--<form class="navbar-form navbar-left">
+    <div id="navbarholder" > 
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="/">StockPort</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="/">Home</a></li>
+                    <li><a href="/admin">Admin Hub</a></li>
+                </ul>
+                <!--<form class="navbar-form navbar-left">
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Search">
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>-->
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="\register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                <li><a href="\login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                <li><a href="\logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-            </ul>
-        </div>
-    </nav>
+                <ul class="nav navbar-nav navbar-right">
+                    <li id = "signup"><a href="\register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                    <li id = "login"><a href="\login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <li id = "logout"><a href="\logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                    <!--<li id = "loggedin" hidden><a href="\logout"><span class="glyphicon glyphicon-log-out"></span> Name</a></li>-->
+                </ul>
+            </div>
+        </nav>
+    </div>
     <!-- Jumbotron -->
     <div class="container">
         <div class="jumbotron">
@@ -101,15 +104,15 @@
         <!--hidden initially-->
 
         <div id="stock_div">
-            
+
             <div class="jumbotron">
                 <h5>Individual Stock Details</h5>
                 <h1 id="stock_name"></h1>
                 <p id="stock_industry" class="lead"></p>
                 <!--<p id="sensex_perc" class="lead"></p>-->
             </div>
-            <div  id="chartContainer" style="width:100%; height:280px"></div>
-           
+            <div id="chartContainer" style="width:100%; height:280px"></div>
+
             <table id="table_stock_detail" class="table table-striped">
                 <thead>
                     <tr>
