--- a/views/login.html
+++ b/views/login.html
@@ -15,12 +15,37 @@
 </head>
 
 <body>
+    <div id="navbarholder" > 
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="/">StockPort</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="/">Home</a></li>
+                    <li><a href="/admin">Admin Hub</a></li>
+                </ul>
+                <!--<form class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>-->
+                <ul class="nav navbar-nav navbar-right">
+                    <li id = "signup"><a href="\register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                    <li id = "login"><a href="\login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <li id = "logout"><a href="\logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                    <!--<li id = "loggedin" hidden><a href="\logout"><span class="glyphicon glyphicon-log-out"></span> Name</a></li>-->
+                </ul>
+            </div>
+        </nav>
+    </div>
     <div class="container">
-        <form class="form-signin" >
+        <form class="form-signin">
             <h2 class="form-signin-heading">Please sign in</h2>
             <input type="text" name="username" class="form-control" placeholder="username" required autofocus>
             <input type="password" name="password" class="form-control" placeholder="password" required>
-            <input class="btn btn-lg btn-primary btn-block" type="submit" value = "login" />
+            <input class="btn btn-lg btn-primary btn-block" type="submit" value="login" />
         </form>
     </div>
     <!-- /container -->
