--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -84,7 +84,7 @@
         <h2 class="form-signin-heading">Update Portfolio</h2>
         <!---->
         <select id="stocksel" class="form-signin form-control"></select>
-        <input type="text" name="date" class="form-control" placeholder="YYYYMMDD" required>
+        <input type="date" name="date" class="form-control" placeholder="YYYYMMDD" required>
         <input type="number" name="qty" class="form-control" placeholder="qty" required>
         <input class="btn btn-lg btn-primary btn-block" type="submit" value="Update Portfolio"></input>
     </form>
